Address sonar cloud issues